--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -6,6 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p> Hello</p>
+    <p> Hello Lorem ipsum dolor sit amet consectetur, adipisicing elit. Non, ipsam quas nisi, est eos adipisci, magni ullam distinctio hic ducimus molestiae! Asperiores sint accusantium similique suscipit dignissimos eaque hic fugiat!</p>
 </body>
 </html>
