--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p>This is my Para</p>
+    <p>This is another one</p>
+    <!--Comment -->
 </body>
 </html>
