--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -6,7 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    <p>This is my Para</p>
+    <p>Headings</p>
+    <h1>1</h1>
+    <h2>2</h2>
+    <h3>3</h3>
+    <h4>4</h4>
+    <h5>5</h5>
+    <h6>6</h6>
     <p>This is another one</p>
     <!--Comment -->
 </body>
