--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -15,5 +15,11 @@
     <h6>6</h6>
     <p>This is another one</p>
     <!--Comment -->
+
+    <p>This is <b>Bold Text </b></p>
+    <p>This is <i>Italic Text</i></p>
+    <p>This is <u>Underlined Text</u></p>
+
+
 </body>
 </html>
