--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -21,5 +21,8 @@
     <p>This is <u>Underlined Text</u></p>
 
 
+    <a href="https://google.com" target="_blank" title="Google Stuff"> Google link</a>
+
+
 </body>
 </html>
