--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -23,6 +23,14 @@
 
     <a href="https://google.com" target="_blank" title="Google Stuff"> Google link</a>
 
+    <br><br>
 
+    <a href="#name">Text link to name ID</a>
+
+    <div style="height: 100vh;"></div>
+
+    <h2 id="name">This is the name ID</h2>
+
+    <div style="height: 100vh;"></div>
 </body>
 </html>
