--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -21,7 +21,16 @@
     <p>This is <u>Underlined Text</u></p>
 
 
+    <img src="example.jpg" alt="">
+
+    <a href="https://google.com" target="_blank"> 
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQNJgVPk88H7N4njkQXBGIBomyJly6uSngxQ&s" alt=""> </a>
+
+        <br><br>
+    
+
     <a href="https://google.com" target="_blank" title="Google Stuff"> Google link</a>
+    
 
     <br><br>
 
