--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -20,13 +20,22 @@
     <p>This is <i>Italic Text</i></p>
     <p>This is <u>Underlined Text</u></p>
 
+<br>
+    <img src="example.jpg" alt="" width="250">
 
-    <img src="example.jpg" alt="">
+<br>
+
+    <img src="img/example.jpg" alt="" width="300">
+
+<br>
+
+    <img src="" alt="">
 
     <a href="https://google.com" target="_blank"> 
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQNJgVPk88H7N4njkQXBGIBomyJly6uSngxQ&s" alt=""> </a>
+        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQNJgVPk88H7N4njkQXBGIBomyJly6uSngxQ&s" title="Image Placeholder" alt="Image Placeholder Text"> </a>
 
         <br><br>
+
     
 
     <a href="https://google.com" target="_blank" title="Google Stuff"> Google link</a>
