--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -20,6 +20,8 @@
     <p>This is <i>Italic Text</i></p>
     <p>This is <u>Underlined Text</u></p>
 
+    <p>This is a <a href="https://google.com" target="_blank" title="Google Stuff"> Google link</a></p>
+
 <br>
     <img src="example.jpg" alt="" width="250">
 
