--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -27,7 +27,9 @@
 
 <br>
 
-    <img src="img/example.jpg" alt="" width="300">
+    <img src="img/example.jpg" title="Image Example" alt="Example Title" width="200" height="200" style="border: 2px solid red; border-radius: 50%;">
+
+    <h3 style="color: red;">This is RED</h3>
 
 <br>
 
