--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -16,6 +16,17 @@
     <p>This is another one</p>
     <!--Comment -->
 
+    <ul>
+    <li>One Item</li>
+    <li>Two Item
+        <ul>
+            <li>New List One</li>
+            <li>New List Two</li>
+        </ul>
+    </li>
+    <li>Three Item</li>
+</ul>
+
     <p>This is <b>Bold Text </b></p>
     <p>This is <i>Italic Text</i></p>
     <p>This is <u>Underlined Text</u></p>
