--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -16,7 +16,7 @@
     <p>This is another one</p>
     <!--Comment -->
 
-    <ul>
+<ul>
     <li>One Item</li>
     <li>Two Item
         <ul>
@@ -26,6 +26,18 @@
     </li>
     <li>Three Item</li>
 </ul>
+
+<Ol>
+    <Li>Soda</Li>
+    <Li>Milkshake
+        <Ol>
+            <Li>Vanilla</Li>
+            <Li>Chocolate</Li>
+            <Li>Strawberry</Li>
+        </Ol>
+    </Li>
+    <Li>Water</Li>
+</Ol>
 
     <p>This is <b>Bold Text </b></p>
     <p>This is <i>Italic Text</i></p>
