--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -16,6 +16,30 @@
     <p>This is another one</p>
     <!--Comment -->
 
+
+    <table style="width: 100%; text-align: center;" border="1">
+        <tr>
+            <th>Person</th>
+            <th>City</th>
+            <th>Business</th>
+        </tr>
+        <tr>
+            <td>Bill</td>
+            <td>Seattle</td>
+            <td>Coffee</td>
+        </tr>
+        <tr>
+            <td>Jill</td>
+            <td>London</td>
+            <td>Hair Salon</td>
+        </tr>
+        <tr>
+            <td>Phil</td>
+            <td>Sydney</td>
+            <td>Lounge</td>
+        </tr>
+    </table>
+
 <ul>
     <li>One Item</li>
     <li>Two Item
