--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -16,6 +16,19 @@
     <p>This is another one</p>
     <!--Comment -->
 
+    <form action="example.php" method="post">
+        Name:
+        <input type="text" name="name" placeholder="Enter your name.">
+        <br><br>
+        <label for="email">Email:</label>
+        <input type="email" name="email" id="email" placeholder="Enter your email." required>
+        <br><br>
+        <textarea name="message" cols="22" rows="3" placeholder="Enter your message."></textarea>
+        <br><br>
+        <input type="button" value="Send message">
+
+    </form>
+
 
     <table style="width: 100%; text-align: center;" border="1">
         <tr>
