--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -14,6 +14,8 @@
     <h5>5</h5>
     <h6>6</h6>
     <p>This is another one</p>
+
+    <br><br>
     <!--Comment -->
 
     <form action="example.php" method="post">
@@ -25,9 +27,10 @@
         <br><br>
         <textarea name="message" cols="22" rows="3" placeholder="Enter your message."></textarea>
         <br><br>
-        <input type="button" value="Send message">
+        <input type="submit" value="Send message">
 
     </form>
+    <br><br>
 
 
     <table style="width: 100%; text-align: center;" border="1">
