--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -32,6 +32,34 @@
     </form>
     <br><br>
 
+    <form action="">
+        <input type="text">
+        <br><br>
+        <input type="time">
+        <br><br>
+        <input type="week">
+        <br><br>
+        <input type="month">
+        <br><br>
+        <input type="date">
+        <br><br>
+        <input type="datetime-local">
+        <br><br>
+        <input type="file">
+        <br><br>
+        <input type="number" placeholder="number">
+        <br><br>
+        <input type="email" placeholder="email">
+        <br><br>
+        <input type="password" placeholder="password">
+        <br><br>
+        <input type="search" placeholder="search">
+        <br><br>
+        <input type="radio">
+        <br><br>
+
+    </form>
+
 
     <table style="width: 100%; text-align: center;" border="1">
         <tr>
