--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -57,6 +57,17 @@
         <br><br>
         <input type="radio">
         <br><br>
+        <input type="checkbox">
+        <br><br>
+        <input type="range">
+        <br><br>
+        <input type="button" value="button">
+        <br><br>
+        <input type="submit">
+        <br><br>
+        <input type="reset">
+        <br><br>
+
 
     </form>
 
