--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -4,8 +4,45 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+        .box{
+           background-color: antiquewhite;
+           width: 48%;
+           float: left;
+           margin: 1%;
+           text-align: center; 
+        }
+        #red{
+            color: red;
+        }
+        #blue{
+            color: blue;
+        }
+
+
+    </style>
 </head>
 <body>
+
+<p style="background-color: aquamarine;">T</p>
+
+<h1 style="border: 1px solid black;">Block</h1>
+
+<big style="border: 1px solid black;">Inline</big>
+
+<p style="border: 1px solid black; background-color: yellow;">Cheese Block</p>
+
+<p>Standing <mark>inline</mark> at the store.</p>
+
+<h2>HTML Audio</h2>
+<audio controls>
+    <source src="example.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+</audio>
+
+
+
+
     <p>Headings</p>
     <h1>1</h1>
     <h2>2</h2>
@@ -16,6 +53,16 @@
     <p>This is another one</p>
 
     <br><br>
+
+    <div class="box">
+        <h1 id="red">Red Shirt</h1>
+        <p>The text above is red.</p>
+    </div>
+    <div class="box">
+        <h1 id="blue">Blue Shirt</h1>
+        <p>The text above is blue.</p>
+    </div>
+
     <!--Comment -->
 
     <form action="example.php" method="post">
@@ -103,6 +150,7 @@
             <input type="submit" value="Contact Us">
         </fieldset>
     </form>
+    <br><br>
 
     <table style="width: 100%; text-align: center;" border="1">
         <tr>
