--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -40,7 +40,11 @@
     Your browser does not support the audio element.
 </audio>
 
-
+<h2>This is our HTML Video</h2>
+<video controls width="100%">
+    <source src="example.mp4" type="video/mp4">
+    Your browser does not support the video element.
+</video>
 
 
     <p>Headings</p>
