--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -4,8 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <Style>
+        h1{
+            text-align: center;
+            background-color: lightslategray;
+            color: white;
+            padding: 20px;
+            border-radius: 20px;
+        }
+
+        
+    </Style>
 </head>
 <body>
-    
+    <h1>Lorem ipsum
+    </h1>
+
+    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, ut!</P>
 </body>
 </html>
