--- a/HTML & CSS Starter Files/index.html
+++ b/HTML & CSS Starter Files/index.html
@@ -13,13 +13,32 @@
             border-radius: 20px;
         }
 
-        
+        h2{
+            color: blue;
+            text-align: center;
+
+        }
+        p{
+          text-align: center;  
+        }
     </Style>
 </head>
 <body>
     <h1>Lorem ipsum
     </h1>
 
-    <P>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, ut!</P>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, ut!!!!<br></p>
+
+<h2>
+    h2 {color: blue;}
+</h2>
+
+<p>"h2" is the selector</p>
+<p>{} represents a CSS Style Declaration</p>
+<p> "color" or "text-align" is the Property</p>
+<p> "blue" or "center" is the value</p>
+
+
+
 </body>
 </html>
