--- a/45.+Document+&+Body/45. Document & Body/index.html
+++ b/45.+Document+&+Body/45. Document & Body/index.html
@@ -17,12 +17,19 @@
          font-size: 18px;
          color: #565859;
       }
+
+      .wrapper{
+         background-color: #f6faff;
+         max-width: 700px;
+         margin: 0 auto;
+         box-shadow: 0 0 10px #616e79;
+      }
    </style>
 </head>
 <body>
-
+<div class="wrapper">
    <p>Test</p>
-   
+</div> 
 </body>
 </html>
 
