--- a/45.+Document+&+Body/45. Document & Body/index.html
+++ b/45.+Document+&+Body/45. Document & Body/index.html
@@ -23,12 +23,15 @@
          max-width: 700px;
          margin: 0 auto;
          box-shadow: 0 0 10px #616e79;
+         border-top: 10px solid #37a28f;
+         border-radius: 5px 10px;
       }
    </style>
 </head>
 <body>
 <div class="wrapper">
    <p>Test</p>
+   <h1>Test</h1>
 </div> 
 </body>
 </html>
