--- a/45.+Document+&+Body/45. Document & Body/index.html
+++ b/45.+Document+&+Body/45. Document & Body/index.html
@@ -25,6 +25,7 @@
          box-shadow: 0 0 10px #616e79;
          border-top: 10px solid #37a28f;
          border-radius: 5px 10px;
+         overflow: auto;
       }
    </style>
 </head>
