--- a/45.+Document+&+Body/45. Document & Body/index.html
+++ b/45.+Document+&+Body/45. Document & Body/index.html
@@ -31,8 +31,11 @@
 </head>
 <body>
 <div class="wrapper">
-   <p>Test</p>
-   <h1>Test</h1>
+   <div class="logo">
+      <a href="https://example.com" target="_blank"><img src="img/logo.png" alt=""></a>
+   </div>
+
+
 </div> 
 </body>
 </html>
