--- a/45.+Document+&+Body/45. Document & Body/index.html
+++ b/45.+Document+&+Body/45. Document & Body/index.html
@@ -32,9 +32,9 @@
 <body>
 <div class="wrapper">
    <div class="logo">
-      <a href="https://example.com" target="_blank"><img src="img/logo.png" alt=""></a>
+      <a href="https://example.com" target="_blank"><img src="https://mcusercontent.com/474f5b70c3b324277323d4c42/images/a4557e2f-5b15-4f27-fe98-a6afe9049dff.png" alt="HTML5 LOGO" title="HTML5 LOGO"></a>
    </div>
-
+   <a href="https://example.com" target="_blank"><img src="https://mcusercontent.com/474f5b70c3b324277323d4c42/images/483509a6-473e-3eb9-51d6-08f0f4da8b44.png" alt="Responsive Banner" title="Responsive Banner"></a>
 
 </div> 
 </body>
