--- a/45.+Document+&+Body/45. Document & Body/index.html
+++ b/45.+Document+&+Body/45. Document & Body/index.html
@@ -27,6 +27,13 @@
          border-radius: 5px 10px;
          overflow: auto;
       }
+      .logo{
+         text-align: center;
+         padding: 5px 0;
+         }
+      .logo img{
+         max-width: 250px;
+      }
    </style>
 </head>
 <body>
