--- a/45.+Document+&+Body/45. Document & Body/index.html
+++ b/45.+Document+&+Body/45. Document & Body/index.html
@@ -29,10 +29,14 @@
       }
       .logo{
          text-align: center;
-         padding: 5px 0;
+         padding: 1% 0;
          }
       .logo img{
          max-width: 250px;
+      }
+
+      img{
+         max-width: 100%;
       }
    </style>
 </head>
