--- a/45.+Document+&+Body/45. Document & Body/index.html
+++ b/45.+Document+&+Body/45. Document & Body/index.html
@@ -48,6 +48,12 @@
    </div>
    <a href="https://example.com" target="_blank"><img src="https://mcusercontent.com/474f5b70c3b324277323d4c42/images/483509a6-473e-3eb9-51d6-08f0f4da8b44.png" alt="Responsive Banner" title="Responsive Banner"></a>
 
+   <div class="three-columns"></div>
+      <a href="https://example.com" target="_blank"><img src="https://mcusercontent.com/474f5b70c3b324277323d4c42/images/50164d13-9cac-8682-ceb8-301a69a3c484.png" alt="Mouse" title="Mouse"></a>
+      <h2>Email Development</h2>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia in at ipsam impedit?</p>
+      <div class="button-holder"></div>
+         <a href="https://example.com" target="_blank" class="btn">Learn More</a>
 </div> 
 <!--end of the wrapper-->
 
