--- a/45.+Document+&+Body/45. Document & Body/index.html
+++ b/45.+Document+&+Body/45. Document & Body/index.html
@@ -38,6 +38,42 @@
       img{
          max-width: 100%;
       }
+
+      .three-columns{
+         width: 29.3%;
+         padding: 5% 2% 6%;
+         text-align: center;
+      }
+      .three-columns img{
+         max-width: 135px;
+      }
+      h2{
+        font-weight: 800; 
+        font-size: 28px;
+        letter-spacing: 1px;
+        margin: 20px 0 8px;
+      }
+      p{
+         line-height: 26px;
+         padding-bottom: 15px;
+
+      }
+      .btn{
+         background-color: #37a28f;
+         color: #fff;
+         text-decoration: none;
+         padding: 10px 14px;
+         font-size: 20px;
+         font-weight: 600;
+         letter-spacing: 1px;
+         border-radius: 6px;
+         box-shadow: 0 5px 10px rgb(0, 0, 0, .2);
+         transition: .4s;
+      }
+      .btn:hover{
+         background-color: #3db5a0;
+         color: #fff;
+         }
    </style>
 </head>
 <body>
@@ -48,14 +84,35 @@
    </div>
    <a href="https://example.com" target="_blank"><img src="https://mcusercontent.com/474f5b70c3b324277323d4c42/images/483509a6-473e-3eb9-51d6-08f0f4da8b44.png" alt="Responsive Banner" title="Responsive Banner"></a>
 
-   <div class="three-columns"></div>
+   <div class="three-columns">
       <a href="https://example.com" target="_blank"><img src="https://mcusercontent.com/474f5b70c3b324277323d4c42/images/50164d13-9cac-8682-ceb8-301a69a3c484.png" alt="Mouse" title="Mouse"></a>
       <h2>Email Development</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia in at ipsam impedit?</p>
-      <div class="button-holder"></div>
+      <p>There are many different email clients to consider when developing your email template.</p>
+      <div class="button-holder">
          <a href="https://example.com" target="_blank" class="btn">Learn More</a>
+      </div>
+     
+      <div class="three-columns">
+         <a href="https://example.com" target="_blank"><img src="https://mcusercontent.com/474f5b70c3b324277323d4c42/images/6bd5d52d-a73d-1dea-9d01-f7c853e49b7a.png" alt="Mobile" title="Mobile"></a>
+         <h2>Mobile Friendly</h2>
+         <p>Most emails are opened on mobile devices today, so make sure your design is mobile friendly.</p>
+         <div class="button-holder">
+            <a href="https://example.com" target="_blank" class="btn">HTML Email</a>
+         </div>
+
+         <div class="three-columns">
+            <a href="https://example.com" target="_blank"><img src="https://mcusercontent.com/474f5b70c3b324277323d4c42/images/8d7ac385-5ff0-23ff-f231-818f7f600693.png" alt="Computer" title="Computer"></a>
+            <h2>Desktop Clients</h2>
+            <p>for desktop email clients like Outlook, we'll need to pay special attention once we use tables.</p>
+            <div class="button-holder">
+               <a href="https://example.com" target="_blank" class="btn">Development</a>
+            </div>
+            
+            <hr class="orange">
 </div> 
-<!--end of the wrapper-->
+</div><!--end of the wrapper-->
+</body>
+
 
 </body>
 </html>
