--- a/45.+Document+&+Body/45. Document & Body/index.html
+++ b/45.+Document+&+Body/45. Document & Body/index.html
@@ -118,6 +118,20 @@
 
       <hr class="orange">
 
+      <div class="two-columns">
+         <a href="https://example.com" target="_blank" <img src="https://mcusercontent.com/474f5b70c3b324277323d4c42/images/bf5b586d-40b7-ad79-e633-408afb06d09d.png" alt="Pie Chart" title="Pie Chart"></a>
+      </div>
+
+      <div class="two-columns second">
+         <h2>Latest Email Design</h2>
+         <p>There are a lot of email clients to consider when choosing a design width but 600px is the most common</p>
+         <div class="button-holder">
+            <a href="https://example.com" target="_blank" class="btn">Email Design Course</a>
+         </div>
+      </div>
+
+      <hr class="orange">
+
    </div> <!-- End of Wrapper -->
    
 </body>
