--- a/45.+Document+&+Body/45. Document & Body/index.html
+++ b/45.+Document+&+Body/45. Document & Body/index.html
@@ -77,6 +77,18 @@
          width: 96%;
          margin: 15px auto;
       }
+      .two-columns{
+         float: left;
+         width: 46%;
+         padding: 5% 2%;
+         margin: 10px 0 26px;
+
+      }
+
+      .two-columns h2{
+         margin: 0;
+
+      }
    </style>
 </head>
 <body>
@@ -119,7 +131,7 @@
       <hr class="orange">
 
       <div class="two-columns">
-         <a href="https://example.com" target="_blank" <img src="https://mcusercontent.com/474f5b70c3b324277323d4c42/images/bf5b586d-40b7-ad79-e633-408afb06d09d.png" alt="Pie Chart" title="Pie Chart"></a>
+         <a href="https://example.com" target="_blank" ><img src="https://mcusercontent.com/474f5b70c3b324277323d4c42/images/bf5b586d-40b7-ad79-e633-408afb06d09d.png" alt="Pie Chart" title="Pie Chart"></a>
       </div>
 
       <div class="two-columns second">
