--- a/45.+Document+&+Body/45. Document & Body/index.html
+++ b/45.+Document+&+Body/45. Document & Body/index.html
@@ -144,6 +144,14 @@
 
       <hr class="orange">
 
+      <ul class="social">
+         <li><a href="https://example.com" target="_blank"><img src="https://mcusercontent.com/474f5b70c3b324277323d4c42/images/1a6782e3-f142-ec52-d4ec-1c0157862bb9.png" alt="Facebook" title="Facebook"></a></li>
+         <li><a href="https://example.com" target="_blank"><img src="https://mcusercontent.com/474f5b70c3b324277323d4c42/images/2f293c33-95ab-8d60-5d77-ee4f6ae71819.png" alt="Twitter" title="Twitter"></a></li>
+         <li><a href="https://example.com" target="_blank"><img src="https://mcusercontent.com/474f5b70c3b324277323d4c42/images/c1e036b3-1fcf-2cd8-1555-1923527d3283.png" alt="YouTube" title="YouTube"></a></li>
+         <li><a href="https://example.com" target="_blank"><img src="https://mcusercontent.com/474f5b70c3b324277323d4c42/images/9ce0f040-d943-f8e4-402a-5f4701e6a272.png" alt="Instagram" title="Instagram"></a></li>
+         <li><a href="https://example.com" target="_blank"><img src="https://mcusercontent.com/474f5b70c3b324277323d4c42/images/5ff910f1-fd56-beac-9a15-46aadfb5d544.png" alt="Linkedin" title="Linkedin"></a></li>
+      </ul>
+
    </div> <!-- End of Wrapper -->
    
 </body>
