--- a/45.+Document+&+Body/45. Document & Body/index.html
+++ b/45.+Document+&+Body/45. Document & Body/index.html
@@ -152,6 +152,15 @@
          <li><a href="https://example.com" target="_blank"><img src="https://mcusercontent.com/474f5b70c3b324277323d4c42/images/5ff910f1-fd56-beac-9a15-46aadfb5d544.png" alt="Linkedin" title="Linkedin"></a></li>
       </ul>
 
+      <p class="contact">
+         <a href="https://example.com" target="_blank">www.myportfolio.com</a><br>
+         <a href="tel:18005555555">1-800-555-5555</a><br>
+         <a href="mailto:name@gmail.com">name@gmail.com</a><br>
+         2 Town Road - City - State - 99000<br>
+         <a href="https://example.com" target="_blank">Unsubscribe</a> |
+         <a href="https://example.com" target="_blank">Preferences</a><br>
+      </p>
+
    </div> <!-- End of Wrapper -->
    
 </body>
