--- a/45.+Document+&+Body/45. Document & Body/index.html
+++ b/45.+Document+&+Body/45. Document & Body/index.html
@@ -89,6 +89,27 @@
          margin: 0;
 
       }
+      ul.social{
+         list-style-type: none;
+         text-align: center;
+         padding: 10px;
+         margin: 20px 0 5px;
+
+      }
+      ul.social li{
+         display: inline;
+
+      }
+      .social img{
+         max-width: 40px;
+      }
+      .contact{
+         text-align: center;
+         color: #2b9684;
+      }
+      .contact a{
+         color: #2b9684;
+      }
    </style>
 </head>
 <body>
