--- a/Boilerplate Starter File/boilerplate.html
+++ b/Boilerplate Starter File/boilerplate.html
@@ -8,6 +8,15 @@
     <meta name="x-apple-disable-message-reformatting">
     <meta name="color-scheme" content="light dark">
     <meta name="supported-color-schemes" content="light dark">
+    <!--[if mso]>
+        <noscript>
+            <xml>
+                <o:OfficeDocumentSettings>
+                    <o:PixelsPerInch>96</o:PixelsPerInch>
+                </o:OfficeDocumentSettings>
+            </xml>
+        </noscript>
+    <![end if]-->
     <title>Document</title>
     <style type="text/css">
         table{
