--- a/Boilerplate Starter File/boilerplate.html
+++ b/Boilerplate Starter File/boilerplate.html
@@ -16,7 +16,7 @@
                 </o:OfficeDocumentSettings>
             </xml>
         </noscript>
-    <![end if]-->
+    <![endif]-->
     <title>Document</title>
     <style type="text/css">
         table{
@@ -66,6 +66,19 @@
             
         }
     </style>
+    <!--[if mso]>
+        <style type="text/css">
+            body{background-color: #dde0e1 !important}
+            body, table, td, p, a{font-family: Arial, Helvetica, sans-serif !important;}
+            table {border-spacing: 0 !important; border-collapse: collapse !important; 
+            line-height: 100% !important;
+            mso-line-height-rule: exactly !important;
+            mso-table-lspace: 0pt !important;
+            mso-table-rspace: 0pt !important;
+            }
+        </style>
+    <![endif]-->
+
 </head>
 <body>
    <div class="background-test" style="padding: 12px;">
