--- a/Boilerplate Starter File/boilerplate.html
+++ b/Boilerplate Starter File/boilerplate.html
@@ -77,8 +77,19 @@
 
    <div style="width: 100%; table-layout:fixed; background-color: #dde0e1; color:#3d3d3d; font-family: Arial, Helvetica, sans-serif; font-size: 16px; margin: 0 auto 40px;">
       <div style="max-width: 600px; background-color: #fafdfe; color:#3d3d3d; font-family: Arial, Helvetica, sans-serif; font-size: 16px; box-shadow: 0 0 10px rgba(0, 0, 0, .2);margin: 0 auto;">
+    <div style="font-size: 0;color: #fafdfe; mso-line-height-rule: exactly;line-height: 0px;display: none;max-width: 0;max-height: 0; opacity: 0; overflow: hidden; mso-hide: all;">
+        This is our preheader text which can be 35 - 190 characters but 85-100 is recommended.
+        &zwnj;&nbsp;&#847;
+    </div>
+    <table align="center" style="border-spacing: 0; border-collapse: collapse; color:#3d3d3d; font-family: Arial, Helvetica, sans-serif; font-size: 16px; background-color: #fafdfe; margin: 0 auto; padding: 0; width: 100%; max-width: 600px;" role="presentation">
+
+    <tr>
+        <td style="height: 10px;background-color: aquamarine;"></td>
+    </tr>
+
+    </table>
+
     <h1>Hello</h1>
-      
       </div>
    </div>
 
